# strobes-bridge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  install.ps1  install.sh  pyproject.toml
.github/workflows/: build_sandbox_pack.yml  ci.yml  release.yml
sandbox_pack/: README.md  build_linux_manylinux.sh  build_pack.py  internal-ad-requirements.in  sandbox-requirements.in  test_pack.py  tools.manifest.json
strobes_shell_agent/: cli.py  client.py  executor.py  pack.py  pty_handler.py  service.py
tests/: test_client.py  test_executor.py  test_pack.py  test_pty.py  test_service.py
